--- a/css/styles.css
+++ b/css/styles.css
@@ -21,15 +21,23 @@ html {
 body {
     font-family: 'Spartan', sans-serif;
     font-weight: 400;
-    font-size: 0.8rem;
+    font-size: 0.85rem;
     line-height: 1.3;
     color: var(--very-dark-magenta);
+    background-image: 
+        url("../images/bg-pattern-top-mobile.svg"),
+        url("../images/bg-pattern-bottom-mobile.svg");
+    background-position: top left, bottom right;    
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 main {
     min-height: 100vh;
-    max-width: 100vw;;
+    max-width: 100vw;
 }
+
+/* Upper-Half Styles */
 
 .upper-half {
     text-align: center;
@@ -49,19 +57,31 @@ main {
     color: var(--dark-grayish-magenta);
 }
 
-.ratings h6, 
-.profile {
+.ratings > * {
+    background-color: var(--light-grayish-magenta);
+}
+
+.ratings h6 {
     font-size: 0.85rem;
+}
+
+/* Lower-Half Styles */
+
+.users > * {
+    background-color: var(--very-dark-magenta);
+    margin-top: 1rem;
+    color: var(--white);
 }
 
 .profile p:nth-child(2) {
     font-weight: 700;
-    color: white;
 }
 
 .profile p:nth-child(3) {
     color: var(--soft-pink);
 }
+
+/* Attribution/Footer Styles  */
 
 .attribution {
     font-size: 0.6875rem;
