--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,13 @@ html {
 body {
     font-family: 'Spartan', sans-serif;
     font-weight: 400;
-    font-size: 0.85rem;
+    font-size: 0.787rem;
     line-height: 1.3;
     color: var(--very-dark-magenta);
     background-image: 
         url("../images/bg-pattern-top-mobile.svg"),
         url("../images/bg-pattern-bottom-mobile.svg");
-    background-position: top left, bottom right;    
+    background-position: left top, right bottom;    
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -37,40 +37,71 @@ main {
     max-width: 100vw;
 }
 
+main > * {
+    margin: 0 1.5rem;
+}
+
 /* Upper-Half Styles */
 
 .upper-half {
     text-align: center;
+    margin-top: 5.1rem;
 }
 
 .intro-message h1 {
-    font-size: 2.1rem;
+    font-size: 2rem;
     font-weight: 700;
     line-height: 1;
     letter-spacing: -0.1rem;
 }
 
 .intro-message p {
-    font-size: 0.92rem;
+    font-size: 0.907rem;
     font-weight: 500;
-    line-height: 1.7;
+    line-height: 1.5;
     color: var(--dark-grayish-magenta);
+    margin-top: 1.5rem;
+}
+
+.ratings {
+    margin-top: 2.625rem;
 }
 
 .ratings > * {
     background-color: var(--light-grayish-magenta);
+    border-radius: 0.5rem;
+    /* max-height: 4.875rem; */
+    display: flex;
+    flex-direction: column;
+}
+
+.report-guru,
+.besttech {
+    margin-top: 1rem;
+}
+
+.ratings .stars {
+    margin: 0.9375rem 0;
 }
 
 .ratings h6 {
     font-size: 0.85rem;
+    margin-bottom: 0.9375rem;
 }
 
 /* Lower-Half Styles */
 
+.lower-half {
+    margin-top: 3.0625rem;
+    margin-bottom: 6.1875rem;
+}
+
 .users > * {
     background-color: var(--very-dark-magenta);
     margin-top: 1rem;
+    border-radius: 0.5rem;
     color: var(--white);
+    padding: 2.5rem 2rem 2.125rem;
 }
 
 .profile {
@@ -85,6 +116,8 @@ main {
 .profile-details {
     display: flex;
     flex-direction: column;
+    margin-left: 1.5rem;
+    justify-content: center;
 }
 
 .profile-details p:nth-child(1) {
@@ -95,12 +128,17 @@ main {
     color: var(--soft-pink);
 }
 
+.quote {
+    margin-top: 1.875rem;
+}
+
 /* Attribution/Footer Styles  */
 
 .attribution {
     font-size: 0.6875rem;
     text-align: center;
     color: var(--dark-grayish-magenta);
+    margin-bottom: 1rem;
 }
 
 .attribution a {
