--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,9 @@ html {
 *, 
 *::before,
 *::after {
-    box-sizing: inherit;
     padding: 0;
     margin: 0;
+    box-sizing: inherit;
 }
 
 body {
@@ -33,12 +33,16 @@ body {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     min-height: 100vh;
-    max-width: 100vw;
 }
 
 main > * {
     margin: 0 1.5rem;
+    max-width: 35rem;
 }
 
 /* Upper-Half Styles */
@@ -70,7 +74,6 @@ main > * {
 .ratings > * {
     background-color: var(--light-grayish-magenta);
     border-radius: 0.5rem;
-    /* max-height: 4.875rem; */
     display: flex;
     flex-direction: column;
 }
@@ -82,6 +85,13 @@ main > * {
 
 .ratings .stars {
     margin: 0.9375rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stars img {
+    margin: 0 0.3rem;
 }
 
 .ratings h6 {
@@ -144,4 +154,26 @@ main > * {
 .attribution a {
     text-decoration: none;
     color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 420px) {
+    .ratings > * {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .ratings h6 {
+        margin: unset;
+    }
+
+    .reviews .stars,
+    .besttech .stars {
+        margin-right: 2rem;
+    }
+
+    .report-guru .stars {
+        margin-right: 0.5rem;
+    }
+
 }
