--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,17 @@ main > * {
     }
 }
 
+@media only screen and (min-width: 48em) {
+    body {
+        background-image: 
+            url("../images/bg-pattern-top-desktop.svg"),
+            url("../images/bg-pattern-bottom-desktop.svg");
+        background-position: left top, right bottom;
+        background-repeat: no-repeat;
+        background-size: 50%, 125%;
+    }
+}
+
 @media only screen and (min-width: 90em) {
     body {
         background-image: 
